# skylark-parachain

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/creation/: Cargo.toml
pallets/creation/src/: lib.rs
pallets/curated-group/: Cargo.toml
pallets/curated-group/src/: lib.rs
pallets/interaction/: Cargo.toml
pallets/interaction/src/: lib.rs
pallets/primitives/: Cargo.toml
pallets/primitives/src/: lib.rs
pallets/tcx/: Cargo.toml
pallets/tcx/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs
