[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-creation'
version = '0.1.0'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std"
]
